--- a/modules/varbase_features/varbase_media/css/varbase_media.common_logged.css
+++ b/modules/varbase_features/varbase_media/css/varbase_media.common_logged.css
@@ -2,13 +2,14 @@
  * Varbase media common logged in users style.
  */
 
+/* Style the entity select and editor image dialog for images. */
 .entity-select-dialog #entity-embed-dialog-form .form-type-radio,
-.editor-image-dialog #editor-image-dialog-form .form-type-radio  {
+.editor-image-dialog #editor-image-dialog-form .form-type-radio {
   display: block;
 }
 
 .entity-select-dialog #entity-embed-dialog-form .form-type-radio label:after,
-.editor-image-dialog #editor-image-dialog-form .form-type-radio label:after{
+.editor-image-dialog #editor-image-dialog-form .form-type-radio label:after {
   content: "";
 }
 
@@ -20,7 +21,7 @@
 }
 
 .entity-select-dialog #entity-embed-dialog-form .input-group .select-wrapper:first-child .form-control:first-child,
-.editor-image-dialog #editor-image-dialog-form .input-group .select-wrapper:first-child .form-control:first-child{
+.editor-image-dialog #editor-image-dialog-form .input-group .select-wrapper:first-child .form-control:first-child {
   border-bottom-left-radius: 4px;
   border-top-left-radius: 4px;
   border-bottom-right-radius: 4px;
@@ -28,6 +29,21 @@
 }
 
 .entity-select-dialog #entity-embed-dialog-form .form-item-attributes-data-entity-embed-display .input-group-addon,
-.editor-image-dialog #editor-image-dialog-form .form-item-attributes-data-entity-embed-display .input-group-addon{
+.editor-image-dialog #editor-image-dialog-form .form-item-attributes-data-entity-embed-display .input-group-addon {
   display: none;
+}
+
+/* Style the CKEditor widget for images. */
+.cke_widget_wrapper.align-left {
+  margin: 0 8px 8px 0;
+}
+
+.cke_widget_wrapper.align-right {
+  margin: 0 0 8px 8px;
+}
+
+.cke_widget_wrapper.align-right figcaption,
+.cke_widget_wrapper.align-left figcaption,
+.cke_widget_wrapper.align-center figcaption {
+  text-align: center;
 }
